package com.airtribe.libraryManagementSystem.observer;

public interface Observer {
    public void update(String message);
}
